src/test/ui/parser/doc-comment-in-if-statement.rs
fn main() {
    if true /*!*/ {}
    //~^ ERROR expected `{`, found doc comment `/*!*/`
    //~| ERROR expected outer doc comment
}
